# pdf_portfolio

./: .gitlab-ci.yml  manage.py  package.json  pyproject.toml  setup.cfg
config/: .env.template
pdf_app/: admin.py  apps.py  tests.py  urls.py  views.py
pdf_app/migrations/: 0001_initial.py
pdf_app/models/: __init__.py  certification.py  cv.py  education.py  experience.py  language.py  person_detail.py  skill.py  social.py  technology.py
pdf_app/services/: render_pdf.py  skills.py
pdf_app/tests/: conftest.py  test_apps.py  test_models.py  test_pass.py  test_services.py  test_urls.py  test_views.py
pdf_app/tests/data/: data_urls.py  data_views.py
pdf_app/tests/factories/: __init__.py  certification_factory.py  cv_factory.py  education_factory.py  experience_factory.py  language_factory.py  person_detail_factory.py  skill_factory.py  social_factory.py
server/: urls.py  wsgi.py
server/settings/: __init__.py
server/settings/components/: __init__.py  caches.py  common.py  csp.py  logging.py  security.py
server/settings/environments/: development.py  production.py
static/pdf_app/css/: base.css
tasks/: __init__.py  dev.py  django.py  env.py
templates/: base.html
templates/pdf_app/: cv.html  pdf.html
utils/: common.py  config.py  constants.py
