[tool.poetry]
name = "pdf_portfolio"
version = "0.1.0"
description = ""
authors = ["Artur Kutsevol <arthur.kutsevol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
python-decouple = "^3.1"
django-axes = "^5.0"
invoke = "^1.2"
django-csp = "^3.5"
django-feature-policy = "^2.3"
django-referrer-policy = "^1.0"
whitenoise = "^4.1"
django-split-settings = "^0.3.0"
bcrypt = "^3.1"
xhtml2pdf = "^0.2.3"
django-nested-inline = { git = "https://github.com/smcoll/django-nested-inline.git", branch = "hotfix/70"}

[tool.poetry.dev-dependencies]
nplusone = "^1.0"
django-querycount = "^0.7.0"
flake8 = "^3.7"
isort = "^4.3"
django-debug-toolbar = "^2.0"
pytest = "^5.0"
pytest-django = "^3.5"
pytest-cov = "^2.7"
factory-boy = "^2.12"
flake8-blind-except = "^0.1.1"
flake8-builtins = "^1.4"
flake8-commas = "^2.0"
flake8-comprehensions = "^3.1"
flake8-bugbear = "^19.8"
flake8-debugger = "^3.2"
flake8-isort = "^2.8"
flake8-eradicate = "^0.2.4"
flake8-bandit = "^2.1"
flake8-annotations = "^1.1"
flake8-broken-line = "^0.1.1"
flake8-print = "^3.1"
pep8-naming = "^0.9.1"
flake8-docstrings = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
